# manipulation_project

./: README.md
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: moveit.rviz  ur3e_sim.srdf
my_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
object_detection/: setup.py
object_detection/launch/: object_detection.launch.py  object_detection_real.launch.py
object_detection/object_detection/: object_detection.py  object_detection_real.py
object_detection/rviz/: object_det.rviz  object_det_real.rviz
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: moveit.rviz  name.srdf  ur3e_real.srdf
real_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
